plugins {
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id "org.flywaydb.flyway" version "8.5.11"

}

group = 'software.sigma'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "17"

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
	testImplementation 'junit:junit:4.13.2'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.postgresql:postgresql'
	implementation "org.flywaydb:flyway-core"
	implementation 'io.springfox:springfox-swagger2:3.0.0'
	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
	implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation 'org.springframework.kafka:spring-kafka:2.9.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.7.0'
	implementation 'io.cucumber:cucumber-java:7.7.0'
	testImplementation 'org.junit.platform:junit-platform-suite:1.9.0'
	implementation 'io.cucumber:cucumber-spring:7.7.0'
	implementation 'org.reactivestreams:reactive-streams:1.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.3'
	testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.0'
	compileOnly 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5',
			'io.jsonwebtoken:jjwt-jackson:0.11.5'

}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	// Temporarily exclude Cucumber tests
	exclude '**/cucumber/**'
}

compileJava {
	options.compilerArgs = [
			'-Amapstruct.defaultComponentModel=spring'
	]
}

targetCompatibility = JavaVersion.VERSION_17